# openai-harness-linter

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  README.md  pyproject.toml
.claude-hud/: config.json
docs/: OPTIMIZATIONS.md
docs/plans/: 2026-02-23-openai-harness-architecture-linter.md
examples/sample_project/: pyproject.toml
examples/sample_project/myproject/: __init__.py
examples/sample_project/myproject/config/: __init__.py  settings.py
examples/sample_project/myproject/providers/: __init__.py  logging.py  metrics.py
examples/sample_project/myproject/repo/: __init__.py  order_repo.py  user_repo.py
examples/sample_project/myproject/runtime/: __init__.py  app.py
examples/sample_project/myproject/service/: __init__.py  order_service.py  user_service.py
examples/sample_project/myproject/types/: __init__.py  order.py  user.py
examples/sample_project/myproject/ui/: __init__.py  cli.py
examples/violations_demo/: README.md
examples/violations_demo/bad/: .harness_cache  pyproject.toml
examples/violations_demo/bad/myproject/: __init__.py
examples/violations_demo/bad/myproject/providers/: bad_provider.py
examples/violations_demo/bad/myproject/service/: __init__.py  utils.py
examples/violations_demo/bad/myproject/types/: __init__.py  models.py
examples/violations_demo/good/: pyproject.toml
examples/violations_demo/good/myproject/: __init__.py
examples/violations_demo/good/myproject/providers/: __init__.py  good_provider.py
examples/violations_demo/good/myproject/service/: utils.py
examples/violations_demo/good/myproject/types/: __init__.py  models.py
src/harness_linter/: __init__.py  agent_context.py  cache.py  cli.py  config.py  graph.py  hooks.py  layers.py  providers.py
src/harness_linter/contracts/: __init__.py  base.py  layer_contract.py  provider_contract.py
src/harness_linter/formatters/: __init__.py  rust_style.py
src/harness_linter/structural/: __init__.py  base.py  file_size.py  naming.py
tests/: test_agent_context.py  test_cache.py  test_config.py  test_contracts_base.py  test_formatters.py  test_graph.py  test_hooks.py  test_layer_contract.py  test_layers.py  test_provider_contract.py  test_providers.py
tests/test_structural/: __init__.py  test_file_size.py  test_naming.py
