[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-linter"
version = "0.1.0"
description = "OpenAI Harness Linter - A performance-focused import graph analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grimp>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
harness-linter = "harness_linter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
